<resources>
    <string name="app_name">CryptoEnergy</string>
    <string name="txt_cur_level">Level:</string>
    <string name="btn_quests">Quests</string>
    <string name="btn_resources">Resources</string>
    <string name="txt_cur_points_water">0/100</string>
    <string name="txt_cur_points_leaf">0/100</string>
    <string name="txt_cur_points_energy">0/100</string>
    <string name="txt_description">Description</string>
    <string name="txt_reward">Reward</string>
    <string name="txt_description_text_quest1">lldsadad</string>
    <string name="choose_camera_or_file">Take picture or choose a file</string>
    <string name="collect">Collect</string>
    <string name="proof">Provide proof</string>
    <string name="btn_competition">Competition</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_member">Already a member? Login</string>
    <string name="btn_logout">Logout</string>
</resources>
